--- a/Share Extension/es.lproj/Localizable.strings
+++ b/Share Extension/es.lproj/Localizable.strings
@@ -61,6 +61,9 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Compartir";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Parar";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Actualizar";
 
@@ -87,6 +90,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Yo";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Descartar";
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Únete a mi red social de relaciones verdaderas en HalloApp. Bájalo gratis en halloapp.com/dl ";
