--- a/HalloAppClip/nl.lproj/Localizable.strings
+++ b/HalloAppClip/nl.lproj/Localizable.strings
@@ -103,6 +103,9 @@
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ik";
 
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Weggooien";
+
 /* Disclaimer text about receiving SMS verification code */
 "registration.code.disclaimer" = "Je ontvangt een verificatiecode.\nJe aanbieder kan hiervoor kosten in rekening brengen.";
 
