--- a/HalloAppClip/pt-br.lproj/Localizable.strings
+++ b/HalloAppClip/pt-br.lproj/Localizable.strings
@@ -64,8 +64,17 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Compartilhar";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Pare";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Atualizar";
+
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Para habilitar a gravação de áudio, toque em Configurações e ligue o Microfone";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Não foi possível acessar o microfone";
 
 /* Title for generic delete button. */
 "Delete" = "Excluir";
@@ -93,6 +102,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Eu";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Descartar";
 
 /* Disclaimer text about receiving SMS verification code */
 "registration.code.disclaimer" = "Você receberá um código de verificação.\nTarifas da operadora podem ser aplicadas.";
