--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "about.body.2" = "Obrigado por usar e compartilhar o HalloApp com seus amigos e familiares. Estamos melhorando-o a cada semana.";
 
 /* About screen: footer text. Parameter is support email address. */
-"about.footer" = "Se você tiver alguma dúvida ou feedback, envie um e-mail para %@";
+"about.footer" = "Se você tiver alguma dúvida ou comentário, envie um e-mail para %@";
 
 /* About screen: greeting. */
 "about.hallo" = "Ah, olá";
@@ -124,6 +124,9 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Compartilhar";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Pare";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Atualizar";
 
@@ -156,6 +159,9 @@
 
 /* Title for a popup alerting about camera initialization error. */
 "camera.init.error.title" = "Erro de inicialização";
+
+/* No comment provided by engineer. */
+"Cancel" = "Cancelar";
 
 /* Text shown at the top of the chat screen informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "O contato está bloqueado. Toque para desbloquear";
@@ -307,6 +313,30 @@
 /* Warning text displayed in Comments when post wasn't available. */
 "comments.post.loading.failed" = "Ocorreu um erro ao tentar carregar esta postagem. Por favor, tente novamente mais tarde.";
 
+/* Accessibility label for add images button */
+"composer.audio.a11y.addImages" = "Adicionar Imagens";
+
+/* Accessibility label for sharing a post */
+"composer.audio.a11y.shareRecording" = "Compartilhar";
+
+/* Accessibility label for starting an audio recording */
+"composer.audio.a11y.startRecording" = "Iniciar Gravação";
+
+/* Accessibility label for stopping an audio recording */
+"composer.audio.a11y.stopRecording" = "Pare Gravação";
+
+/* Instructions for audio post composer */
+"composer.audio.instructions" = "Toque para gravar";
+
+/* Title for audio post composer */
+"composer.audio.title" = "Nova postagem de áudio";
+
+/* Show the user that the title is tappable */
+"composer.deletevoicenote.message" = "A gravação de voz não será salva se você descartar esta postagem.";
+
+/* Title for alert when closing the post composer with a voice note */
+"composer.deletevoicenote.title" = "Descartar Postagem?";
+
 /* Alert message in composer when a video is too long */
 "composer.max.video.length.message" = "Por favor, selecione outro vídeo ou toque no botão editar.";
 
@@ -388,6 +418,9 @@
 /* VoiceOver label for text post button in floating compose post menu in Home view. */
 "fab.accessibility.text" = "Texto";
 
+/* VoiceOver label for voice note button in floating compose post menu in Home view. */
+"fab.accessibility.voice" = "Nota de Voz";
+
 /* Shown while content is being retracted from feed */
 "feed.deleting" = "Excluindo...";
 
@@ -446,10 +479,10 @@
 "feed.posting" = "Postando...";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.all" = "Compartilhe com todos os seus contatos";
+"feed.privacy.descr.all" = "Compartilhar com todos os meus contatos";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.except" = "Compartilhe com seus contatos, exceto com pessoas que você selecionar";
+"feed.privacy.descr.except" = "Compartilhar com meus contatos, exceto pessoas selecionadas";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Compartilhar apenas com contatos selecionados";
@@ -458,7 +491,7 @@
 "feed.privacy.header" = "Quem verá minhas postagens";
 
 /* Settings > Privacy > Posts: one of the possible setting values. */
-"feed.privacy.list.all" = "Meus contatos telefônicos";
+"feed.privacy.list.all" = "Meus Contatos";
 
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.except" = "Meus contatos, exceto...";
@@ -476,7 +509,7 @@
 "feed.privacy.list.only.details" = "Selecione quem verá esta postagem";
 
 /* Possible Feed Privacy setting value. */
-"feed.privacy.value.my.contacts" = "Meus contatos telefônicos";
+"feed.privacy.value.my.contacts" = "Meus Contatos ";
 
 /* Possible Feed Privacy setting value. Can be longer. */
 "feed.privacy.value.n.contacts.excluded" = "feed.privacidade.valor.n.contatos.excluídos";
@@ -1159,17 +1192,29 @@
 /* Action that will occur when users delete their account */
 "settings.account.delete.bullet3" = "Excluir seu histórico de mensagens neste telefone";
 
+/* Button to continue to the next step of deleting account after warning */
+"settings.account.delete.continue.title" = "Continuar";
+
 /* Label telling the user that their account has been deleted */
 "settings.account.delete.deleted" = "Conta excluída";
 
 /* Alert telling user that their account could not be deleted, and that it's likely due to their phone number */
 "settings.account.delete.error" = "Ocorreu um erro ao excluir sua conta. Certifique-se de que seu número de telefone esteja correto.";
 
+/* Text field label asking for feedback before deleting account */
+"settings.account.delete.feedback.prompt" = "Algum comentário para a equipe HalloApp? (Opcional)";
+
 /* Label above list of things that will happen if they delete their account */
 "settings.account.delete.header" = "Excluir sua conta irá:";
 
 /* Alert message telling the user that account deletion is irreversible */
 "settings.account.delete.irreversible.label" = "Esta ação é irreversível";
+
+/* Text field placeholder for collecting feedback before deleing account */
+"settings.account.delete.phone.number.placeholder" = "Comentários";
+
+/* Text field label for account deletion phone number */
+"settings.account.delete.phone.number.prompt" = "Digite o número do telefone para confirmar";
 
 /* String that's displayed when a spinner is not available to indicate that the view is waiting for a response from the server */
 "settings.account.delete.spinner.replacement" = "Esperando o servidor responder";
@@ -1343,7 +1388,10 @@
 "unknown.contact" = "Contato desconhecido";
 
 /* Text for action label that lets the user accept messages from unknown contacts */
-"unknown.contact.accept.to.message" = "Aceitar mensagem para responder";
+"unknown.contact.accept.to.message" = "Aceitar Mensagem ";
+
+/* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
+"unknown.contact.not.in.contact.book" = "Este usuário não está em sua lista de contatos.";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "Bloquear";
