--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 "• %@" = "• %@";
 
 /* About screen: body text. */
-"about.body.1" = "O HalloApp chegou! E estamos melhorando-o para si e para os seus entes queridos. Trouxemos os aplicativos sociais de volta ao básico, enquanto adicionamos uma camada de segurança e privacidade à qual achamos que todas as pessoas no mundo deveriam ter acesso. O HalloApp nunca usará suas informações pessoais ou lhe mostrará anúncios. Em vez disso, planeamos eventualmente oferecer recursos adicionais por um pequeno custo.";
+"about.body.1" = "O HalloApp chegou! E estamos melhorando-o para si e para os seus entes queridos. Trouxemos os aplicativos sociais de volta ao básico, enquanto adicionamos uma camada de segurança e privacidade à qual achamos que todas as pessoas no mundo deveriam ter acesso. O HalloApp nunca usará suas informações pessoais ou lhe mostrará anúncios. Em vez disso, planejamos eventualmente oferecer recursos adicionais por um pequeno custo.";
 
 /* About screen: body text. */
 "about.body.2" = "Obrigado por usar e partilhar o HalloApp com seus amigos e familiares. Estamos a melhorar-lo a cada semana.";
@@ -65,7 +65,7 @@
 "audio.control.cancel" = "deslize para cancelar";
 
 /* Text to show on banner when no connection is available */
-"banner.no.connection" = "Sem ligação à internet";
+"banner.no.connection" = "Sem Conexão à Internet";
 
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Adicionar";
@@ -124,6 +124,9 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Partilhar";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Pare";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Atualizar";
 
@@ -156,6 +159,9 @@
 
 /* Title for a popup alerting about camera initialization error. */
 "camera.init.error.title" = "Erro de inicialização";
+
+/* No comment provided by engineer. */
+"Cancel" = "Cancelar";
 
 /* Text shown at the top of the chat screen informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "Este contato está bloqueado, toque para desbloquear";
@@ -218,7 +224,7 @@
 "chat.group.leave.group.confirmation" = "Sair de “%@”?";
 
 /* Label shown above group name input box */
-"chat.group.name.label" = "NOME DO GRUPO";
+"chat.group.name.label" = "Nome do Grupo ";
 
 /* Title for group photo actions */
 "chat.group.photo.label" = "Foto do grupo";
@@ -307,6 +313,30 @@
 /* Warning text displayed in Comments when post wasn't available. */
 "comments.post.loading.failed" = "Ocorreu um erro ao tentar carregar esta publicação. Por favor, tente novamente mais tarde.";
 
+/* Accessibility label for add images button */
+"composer.audio.a11y.addImages" = "Adicionar Imagens";
+
+/* Accessibility label for sharing a post */
+"composer.audio.a11y.shareRecording" = "Compartilhar";
+
+/* Accessibility label for starting an audio recording */
+"composer.audio.a11y.startRecording" = "Iniciar Gravação";
+
+/* Accessibility label for stopping an audio recording */
+"composer.audio.a11y.stopRecording" = "Parar Gravação";
+
+/* Instructions for audio post composer */
+"composer.audio.instructions" = "Toque para gravar";
+
+/* Title for audio post composer */
+"composer.audio.title" = "Nova postagem de áudio";
+
+/* Show the user that the title is tappable */
+"composer.deletevoicenote.message" = "A gravação de voz não será salva se você descartar esta postagem.";
+
+/* Title for alert when closing the post composer with a voice note */
+"composer.deletevoicenote.title" = "Descartar Postagem?";
+
 /* Alert message in composer when a video is too long */
 "composer.max.video.length.message" = "Por favor, selecione outro vídeo ou toque no botão editar.";
 
@@ -387,6 +417,9 @@
 
 /* VoiceOver label for text post button in floating compose post menu in Home view. */
 "fab.accessibility.text" = "Texto";
+
+/* VoiceOver label for voice note button in floating compose post menu in Home view. */
+"fab.accessibility.voice" = "Nota de Voz";
 
 /* Shown while content is being retracted from feed */
 "feed.deleting" = "A apagar...";
@@ -1159,17 +1192,29 @@
 /* Action that will occur when users delete their account */
 "settings.account.delete.bullet3" = "Apagar o seu histórico de mensagens neste telefone";
 
+/* Button to continue to the next step of deleting account after warning */
+"settings.account.delete.continue.title" = "Continuar";
+
 /* Label telling the user that their account has been deleted */
 "settings.account.delete.deleted" = "Conta apagada";
 
 /* Alert telling user that their account could not be deleted, and that it's likely due to their phone number */
 "settings.account.delete.error" = "Ocorreu um erro ao apagar a sua conta. Certifique-se de que seu número de telefone esteja correto.";
 
+/* Text field label asking for feedback before deleting account */
+"settings.account.delete.feedback.prompt" = "Algum comentário para a equipe HalloApp? (Opcional)";
+
 /* Label above list of things that will happen if they delete their account */
 "settings.account.delete.header" = "Apagar a sua conta irá:";
 
 /* Alert message telling the user that account deletion is irreversible */
 "settings.account.delete.irreversible.label" = "Esta ação é irreversível";
+
+/* Text field placeholder for collecting feedback before deleing account */
+"settings.account.delete.phone.number.placeholder" = "Comentários ";
+
+/* Text field label for account deletion phone number */
+"settings.account.delete.phone.number.prompt" = "Digite o número do telefone para confirmar";
 
 /* String that's displayed when a spinner is not available to indicate that the view is waiting for a response from the server */
 "settings.account.delete.spinner.replacement" = "Aguardando pelo servidor";
@@ -1344,6 +1389,9 @@
 
 /* Text for action label that lets the user accept messages from unknown contacts */
 "unknown.contact.accept.to.message" = "Aceitar mensagem para responder";
+
+/* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
+"unknown.contact.not.in.contact.book" = "Este usuário não está em sua lista de contatos.";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "Bloquear";
