--- a/Notification Service Extension/de.lproj/Localizable.strings
+++ b/Notification Service Extension/de.lproj/Localizable.strings
@@ -61,8 +61,17 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Teilen";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Stopp";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Aktualisieren";
+
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Für Audioaufnahmen bitte in den Einstellungen das Mikrofon aktivieren";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Zugriff auf das Mikrofon nicht möglich";
 
 /* Title for generic delete button. */
 "Delete" = "Löschen";
@@ -84,6 +93,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ich";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Verwerfen";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Kommentierte: %@";
