--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -61,6 +61,9 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Compartir";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Parar";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Actualizar";
 
@@ -90,6 +93,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Yo";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Descartar";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Comentó: %@";
