--- a/Notification Service Extension/nl.lproj/Localizable.strings
+++ b/Notification Service Extension/nl.lproj/Localizable.strings
@@ -94,6 +94,9 @@
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ik";
 
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Weggooien";
+
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Heeft gereageerd: %@";
 
