--- a/Notification Service Extension/pt-br.lproj/Localizable.strings
+++ b/Notification Service Extension/pt-br.lproj/Localizable.strings
@@ -61,8 +61,17 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Compartilhar";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Pare";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Atualizar";
+
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Para habilitar a gravação de áudio, toque em Configurações e ligue o Microfone";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Não foi possível acessar o microfone";
 
 /* Title for generic delete button. */
 "Delete" = "Excluir";
@@ -84,6 +93,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Eu";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Descartar";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Comentado: %@";
