--- a/Share Extension/pt.lproj/Localizable.strings
+++ b/Share Extension/pt.lproj/Localizable.strings
@@ -61,8 +61,17 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Partilhar";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Pare";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Atualizar";
+
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Para habilitar a gravação de áudio, toque em Configurações e ligue o microfone";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Não foi possível acessar o microfone";
 
 /* Title for generic delete button. */
 "Delete" = "Apagar";
@@ -81,6 +90,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Eu";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Descartar";
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Junte-se à minha rede de relacionamento real no HalloApp. Baixe gratuitamente no site halloapp.com/dl";
